Reserve legend room from the columns the legend is drawn in
The legend is laid out once to reserve room and drawn later, and the two steps computed
the entries per row from different widths and different clamps. A reservation could
therefore promise fewer rows than the drawing needed, and the legend then ran past the
plot it was supposed to sit beside.

- The column count is computed once, by one helper, and the reserved room carries it, so
  the drawing fills exactly the rows that were reserved. Side legends keep their own
  column width, which sizes a column rather than a row.
- A name wider than its column is shortened instead of being left to run into the next
  entry, the same way the corner legend already handles an over-long name.